Fix gitignore and remove tracked files

--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,2 @@
-# ============================
-# C++ Build Artifacts
-# ============================
-*.exe         # Windows executable
-*.out         # Unix-style executable
-*.o           # Object files
-*.obj         # Windows object files
-*.a           # Static libraries
-*.so          # Shared libraries (Linux)
-*.dll         # Windows DLLs
-*.lib         # Windows libraries
-*.class       # Just in case (Java compiled)
-
-# ============================
-# VS Code Settings
-# ============================
-.vscode/      # Local editor settings
-
-# ============================
-# OS & Misc
-# ============================
-.DS_Store     # macOS
-Thumbs.db     # Windows
-*.log         # Log files
-*.tmp         # Temporary files
-*~            # Backup files
-
-# ============================
-# Binaries / Build Outputs
-# ============================
-build/
-bin/
-dist/
-output/
+.vscode/
+*.exe
